# TesisExcel_Procesor

./: OpenBrowser.sh  README.md  consola_app.py  database.py  excel_processor.py  gui.py  pyproject.toml  requirements.txt  tables_design.py
